Bug 249508 disable image loading before setting a new src on image nodes when saving complete web pages. r=bz sr=jst